# rave-fix

./: CMakeLists.txt  PlayButton.qml  TO DO.txt  colors.txt  customslider.cpp  customslider.h  dragdropwidget.cpp  homescreen.cpp  links.txt  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  playlists.cpp  playlists.h  qml.qrc  songs.cpp  songs.h  songwidget.cpp  songwidget.h
.github/workflows/: windows_release.yml
resources/: Home.qml  MoreButton.qml  PlayButton.qml  Player.qml  Playlists.qml  songPanel.qml
